crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__aangs_journey_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 2112
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "SearchLibrary",
        "filter": {
          "type": "Typed",
          "type_filters": [
            "Land"
          ],
          "controller": null,
          "properties": [
            {
              "type": "HasSupertype",
              "value": "Basic"
            }
          ]
        },
        "count": {
          "type": "Fixed",
          "value": 1
        },
        "reveal": false
      },
      "cost": null,
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "SearchLibrary",
          "filter": {
            "type": "Or",
            "filters": [
              {
                "type": "Typed",
                "type_filters": [
                  "Land"
                ],
                "controller": null,
                "properties": [
                  {
                    "type": "HasSupertype",
                    "value": "Basic"
                  }
                ]
              },
              {
                "type": "Typed",
                "type_filters": [
                  "Enchantment",
                  {
                    "Subtype": "Shrine"
                  }
                ],
                "controller": null,
                "properties": []
              }
            ]
          },
          "count": {
            "type": "Fixed",
            "value": 2
          },
          "reveal": false,
          "selection_constraint": {
            "type": "MatchEachFilter",
            "filters": [
              {
                "type": "Typed",
                "type_filters": [
                  "Land"
                ],
                "controller": null,
                "properties": [
                  {
                    "type": "HasSupertype",
                    "value": "Basic"
                  }
                ]
              },
              {
                "type": "Typed",
                "type_filters": [
                  "Enchantment",
                  {
                    "Subtype": "Shrine"
                  }
                ],
                "controller": null,
                "properties": []
              }
            ]
          }
        },
        "cost": null,
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "ChangeZone",
            "origin": "Library",
            "destination": "Hand",
            "target": {
              "type": "Any"
            },
            "owner_library": false,
            "enter_transformed": false,
            "enter_tapped": false,
            "enters_attacking": false
          },
          "cost": null,
          "sub_ability": {
            "kind": "Spell",
            "effect": {
              "type": "ChangeZone",
              "origin": null,
              "destination": "Hand",
              "target": {
                "type": "TrackedSet",
                "id": 0
              },
              "owner_library": false,
              "enter_transformed": false,
              "enter_tapped": false,
              "enters_attacking": false
            },
            "cost": null,
            "sub_ability": {
              "kind": "Spell",
              "effect": {
                "type": "Shuffle",
                "target": {
                  "type": "Controller"
                }
              },
              "cost": null,
              "sub_ability": {
                "kind": "Spell",
                "effect": {
                  "type": "GainLife",
                  "amount": {
                    "type": "Fixed",
                    "value": 2
                  }
                },
                "cost": null,
                "sub_ability": null,
                "duration": null,
                "description": null,
                "target_prompt": null,
                "condition": null,
                "optional_targeting": false,
                "optional": false,
                "forward_result": false,
                "sub_link": "SequentialSibling"
              },
              "duration": null,
              "description": null,
              "target_prompt": null,
              "condition": null,
              "optional_targeting": false,
              "optional": false,
              "forward_result": false
            },
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "else_ability": {
          "kind": "Spell",
          "effect": {
            "type": "ChangeZone",
            "origin": "Library",
            "destination": "Hand",
            "target": {
              "type": "Any"
            },
            "owner_library": false,
            "enter_transformed": false,
            "enter_tapped": false,
            "enters_attacking": false
          },
          "cost": null,
          "sub_ability": {
            "kind": "Spell",
            "effect": {
              "type": "ChangeZone",
              "origin": null,
              "destination": "Hand",
              "target": {
                "type": "TrackedSet",
                "id": 0
              },
              "owner_library": false,
              "enter_transformed": false,
              "enter_tapped": false,
              "enters_attacking": false
            },
            "cost": null,
            "sub_ability": {
              "kind": "Spell",
              "effect": {
                "type": "Shuffle",
                "target": {
                  "type": "Controller"
                }
              },
              "cost": null,
              "sub_ability": {
                "kind": "Spell",
                "effect": {
                  "type": "GainLife",
                  "amount": {
                    "type": "Fixed",
                    "value": 2
                  }
                },
                "cost": null,
                "sub_ability": null,
                "duration": null,
                "description": null,
                "target_prompt": null,
                "condition": null,
                "optional_targeting": false,
                "optional": false,
                "forward_result": false,
                "sub_link": "SequentialSibling"
              },
              "duration": null,
              "description": null,
              "target_prompt": null,
              "condition": null,
              "optional_targeting": false,
              "optional": false,
              "forward_result": false
            },
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": {
          "type": "AdditionalCostPaidInstead"
        },
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": null,
      "description": "Search your library for a basic land card. If this spell was kicked, instead search your library for a basic land card and a Shrine card. Reveal those cards, put them into your hand, then shuffle.\nYou gain 2 life.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [
    {
      "Kicker": {
        "type": "Cost",
        "shards": [],
        "generic": 2
      }
    }
  ],
  "additionalCost": {
    "type": "Kicker",
    "data": {
      "costs": [
        {
          "type": "Mana",
          "cost": {
            "type": "Cost",
            "shards": [],
            "generic": 2
          }
        }
      ]
    }
  }
}
