crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__abraxas_named_equip_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "Attach",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": "You",
          "properties": []
        },
        "selection": {
          "at_resolution": {}
        }
      },
      "cost": {
        "type": "Mana",
        "cost": {
          "type": "Cost",
          "shards": [],
          "generic": 3
        }
      },
      "sub_ability": null,
      "duration": null,
      "description": "Equip {3}",
      "target_prompt": null,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        }
      ],
      "ability_tag": {
        "type": "Equip"
      },
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
